--- a/activities/_20191101-02_rails_girls.md
+++ b/activities/_20191101-02_rails_girls.md
@@ -22,13 +22,63 @@
 # それぞれのコマンドが何なのか説明してみましょう。
 # 何が生成されましたか？
 # そしてサーバーは何をしますか？
+
+[Linux]mkdir projects
+- projectsという名前のディレクトリを作る
+
+[Linux]cd projects
+- ディレクトリの中に入る
+
+[Rails]rails new railsgirls
+- railsgirlsという名前のアプリケーションの雛形を作る
+- railsgirlsという名前のディレクトリができ、その中にアプリケーションを作るために必要な色々が入っている
+
+cd railsgirls
+- [LINUX]railsgirlsディレクトリの中に入る
+
+[Rails]rails server
+- サーバーを立ち上げる
+
+サーバー？
+- railsgirlsアプリケーションを動かすためのもの
+- 世の中の全てのアプリケーションは、何かのサーバーを使って動いている
 ```
 
+- [Rails開発におけるwebサーバーとアプリケーションサーバーの違い（翻訳）](https://qiita.com/jnchito/items/3884f9a2ccc057f8f3a3)
 ### 2. Idea の scaffold をする
+- 今から作るもの -> アイディアを保存しておけるメモアプリのようなもの
+- メモアプリに必要なもの
+  - 要素(何を保存するか)
+    - アイディアの名前
+    - アイディアの詳細な内容
+    - アイディアに関連する画像(あれば)
+  - 画面と機能
+    - list(一覧), add(新規作成), remove(削除), edit(編集), view(詳細画面)
+
 ```
 # scaffold とはなんでしょう？
 # (コマンドの説明をしてください。1. ただのコマンド, 2. モデル名でDBテーブルと関係があるもの;命名規約, 3. 属性や型)
 # また、migration 機能が何で、なぜ必要なのか。
+
+scaffold -> 足場を組む(だったっけ…)
+Railsの便利機能のひとつ
+list(一覧), add(新規作成), remove(削除), edit(編集), view(詳細画面)を一気に作ることができる
+
+rails generate scaffold idea name:string description:text picture:string
+- ideaという名前で、name:string、description、pictureという要素をもつ
+一覧, 新規作成, 削除, 編集, 詳細画面を作る
+
+string？text？
+データベースに保存するデータの形。
+
+ここでMVC + DBの説明
+- scaffoldが作るもの
+  - view(画面)
+  - controller(画面別の機能、modelをviewに渡す)
+  - model(Ideaという概念、登場人物)
+  - migrationファイル
+    - DBはRailsの外側なので、別操作が必要
+    - 操作するためのファイルだけは作ってくれるので、このファイルを元にmigrate(rails db: ~はDBに働きかけるコマンド)
 ```
 
 ### 3. デザインする
@@ -36,40 +86,93 @@
 # HTML と Railsの関係について話してみましょう。
 # views のどの部分が HTML で、どこが Embedded Ruby (ERB)ですか？
 # どうやってこれらが MVC (モデルとコントローラが、動的に HTML や views を生成するロジックを管理しているもの) と関連づけられていますか？
+
+HTMLは画面の見た目のレイアウトをつくるもの。Railsとは別物。
+HTMLがないと画面を作ることができないので、RailsはHTMLを自動的に作るための仕組みを持っている。
+ただしRailsがつくるHTMLはちょっと特殊で、拡張子に.erbがついている。
+これはRubyのコードを埋め込むことができる特別なHTML。
+<% %> で囲まれている部分が埋め込まれたRubyのコード。
+
+(↑でMVCの説明をしているはずなので)
+ideasのディレクトリの中に入っているすべてのerbは、
+ideas_controllerの中に書かれている@がついた変数のことを知っている(@ideas / @idea)
+ので、erbで@ideas / @ideaを使うことができる
 ```
 
 ```
 # CSSとレイアウトについてちょっと話をしてください。
+
+HTMLはレイアウトをつくるもの（骨組み）
+CSSはつくったレイアウトに対して見た目を整えるもの(お洋服)
 ```
 
 ### 4. 写真アップロード機能を追加する
 ```
 # 何のライブラリがあって、なぜ便利なのかを説明してください。
 # オープンソースソフトウェアが何なのかも説明してください。
+
+オープンソースソフトウェア？
+- 誰でも自由に使える & 開発に参加できるもの
+  - 誰でも自由に使える
+    - 自分がわざわざ作らなくても良い！
+    - -> わたし達は写真のアップロード機能を作りたいわけではなくて、写真のアップロード機能がついたアプリを作りたい
+    - -> 物事の本質に集中できる
+  - 誰でも自由に開発できる
+    - バグを自分で治せる
+    - 「あったら良いな」という機能を提案できる
+    - その中でたくさんの人と関わることができる
+- carrierwaveもRailsもオープンソースのライブラリ
+- その他ログイン機能をつけたり、検索機能をつけたり、管理画面を作ったり…
 ```
 
 ```
 # HTML についてちょっと話してください。
+
+ここまでで話しているはずなので割愛…
 ```
 
 ### 5. routes を調整する
 ```
 # routes について話してください。
+
+routes -> RailsがURLをつくる仕組み
+root -> トップページのURL('/')を指定する機能
+resources -> 今回作ったIdeaの機能を使うために必要なURLを作る機能
 ```
 
 ## GitHub であなたのアプリのコードを公開しよう
 ### はじめる前に必要な準備
 ```
 # gitとバージョン管理、そしてオープンソースについてちょっと話してください。
+
+バージョン管理？
+- 保存機能
+
+なぜバージョン管理が必要？
+- ある時点まで保存したりリセットしたり、他の人と同時進行でコードを書いたりしたいときがある
+- gitはバージョン管理のためのライブラリ
+
+(何もしていない状態) -> ステージング -> コミットされた状態
+
+オープンソース？
+- 誰でも自由に使える & 開発に参加できるもの
+- carrierwaveもRailsもオープンソースのライブラリ
+- その他ログイン機能をつけたり、検索機能をつけたり、管理画面を作ったり…
 ```
 
 ### 自分のアプリを、コマンドラインでGitHubにPushする
 ```
 # README.md についてちょっと話してください。
+
+-> https://github.com/rails/rails
+-> https://github.com/shioimm/til
 ```
 
 ```
 # あなたのお気に入りのgitコマンドについて話をしてください。
+
+git rebaseかなあ…
+-> ログの中で自由に行き来できる、いい感じに帳尻合わせしてくれる、途中で中止するのも簡単
 ```
 
 ```
@@ -85,16 +188,47 @@ gitで管理するのは、「開発者がどんなことをしたか」
 ### Heroku の準備
 ```
 # Heroku か、従来のサーバーか、デプロイの利点について話してみましょう。
+
+Herokuはおまかせ、機能の追加も楽
+ただしHerokuにない機能を使おうとする場合や、もっと柔軟にカスタマイズしたい場合は他の方法を考える必要がある
 ```
 
 ### アプリの準備
 ```
 # バージョン管理システムと git について説明するちょうどいいタイミングです。
 # .gitignore の説明と上記のファイルを管理対象外にしたい理由についても説明しましょう。
+
+バージョン管理？
+- 保存機能
+
+なぜバージョン管理が必要？
+- ある時点まで保存したりリセットしたり、他の人と同時進行でコードを書いたりしたいときがある
+- gitはバージョン管理のためのライブラリ
+
+(何もしていない状態) -> ステージング -> コミットされた状態
+
+.gitignore？
+- gitを導入すると、基本的にすべてのファイルが保存される
+- .gitignoreは保存「しない」ための仕組み(機密情報や、保存する必要がないもの)
+
+なぜpublic/imagesをignoreする？
+- 開発者とユーザー、という役割がある
+- gitで管理するのは、「開発者がどんなことをしたか」
+- 一方、ファイルアップロードはユーザーが行う操作
+- 「ユーザーがどんなことをしたか」はgitでは管理しない
 ```
 
 ```
 # RDBMS とそうでないものについて話してみましょう。
+
+RDBMSはエクセルの表のようなイメージ
+- タブ -> テーブル
+- 列   -> カラム
+- 行   -> レコード
+
+そうでないもの
+- 例えば、{ キー => 値 }のような組み合わせで柔軟に管理するDBがある
+
 # Heroku 上の PostgreSQL の制限についても少し取り上げてみてください。
 
 HerokuPGプラン
@@ -110,4 +244,6 @@ https://jp.heroku.com/pricing#databases
 ```
 # どのようなファイルがプッシュされ、どのようなファイルがされなかったか話してみてください。
 # まだであればアップロードされるファイルについて話してみたり、config以下のいくつかのファイルについて可能な範囲で話してみてください。
+
+.gitignoreの話のところで触れているはずなので割愛…
 ```
