--- a/activities/_20191101-02_rails_girls.md
+++ b/activities/_20191101-02_rails_girls.md
@@ -178,10 +178,11 @@ git rebaseかなあ…
 ```
 # アップロードしたファイルがgitの管理対象になるとどのような問題があるか話してみてください。
 
-開発者とユーザー、という役割がある
-gitで管理するのは、「開発者がどんなことをしたか」
-一方、ファイルアップロードはユーザーが行う操作
-「ユーザーがどんなことをしたか」はgitでは管理しない
+railsgirlsディレクトリの中には二種類のファイルがある
+- データ
+- コード
+gitで管理したいのはコード
+データはgitで管理しない
 ```
 
 ## あなたのアプリをインターネットに公開しよう
