--- a/activities/_20191101-02_rails_girls.md
+++ b/activities/_20191101-02_rails_girls.md
@@ -33,8 +33,8 @@
 - railsgirlsという名前のアプリケーションの雛形を作る
 - railsgirlsという名前のディレクトリができ、その中にアプリケーションを作るために必要な色々が入っている
 
-cd railsgirls
-- [LINUX]railsgirlsディレクトリの中に入る
+[LINUX]cd railsgirls
+- railsgirlsディレクトリの中に入る
 
 [Rails]rails server
 - サーバーを立ち上げる
