--- a/activities/_20191101-02_rails_girls.md
+++ b/activities/_20191101-02_rails_girls.md
@@ -252,3 +252,31 @@ https://jp.heroku.com/pricing#databases
 
 .gitignoreの話のところで触れているはずなので割愛…
 ```
+
+# 発生したトラブル
+## `brew`コマンドを打とうとした際に`zsh: command not found: brew`
+### 原因
+- `echo $PATH`で現在の$PATHを調べたところ、`usr/lobal/bin`が抜けていた
+
+### 解決策
+- `.zshrc`に$PATHを追記
+```
+echo 'export PATH="/usr/local/bin:$PATH"' >> ~/.zshrc
+```
+
+## `bundle install`時、`Gemfileに記述されているRubyのバージョンが異なる`旨のエラーが表示された(詳細失念)
+### 原因
+- Gemfileに記述されているRubyのバージョン　-> 2.6.3
+- .ruby-versionsのRubyのバージョン -> 2.6.5
+
+### 解決策
+- Gemfileの方を2.6.5に書き換えて`bundle install`
+
+## `rails s`時、`Rubyのバージョンが異なる`旨のエラーが表示された(詳細失念)
+- `rbenv local 2.6.5`でRubyのバージョンを切り替えても解決しない
+
+### 原因
+- Railsがプロジェクト側のRuby(2.6.5)ではなくシステム側のRuby(2.6.3)に対して依存していたため
+
+### 解決策
+- `bundle exec rails s`
