--- a/develop/establishment/_20191205_mac.md
+++ b/develop/establishment/_20191205_mac.md
@@ -10,15 +10,16 @@ $ xcode-select --install
 ```shell
 $ ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
 ```
-- Homebrewでrbenv、postgresql、nodebrew、yarn、redis、vimをインストール
+- Homebrewでrbenv、postgresql、nodebrew、yarn、redis、vim、graphvizをインストール
 ```shell
 // brew updateで最新状態を確認してから
 $ brew install rbenv
 $ brew install postgresql
-$ brew install node@8
+$ brew install nodebrew
 $ brew install yarn
 $ brew install redis
 $ brew install vim
+$ brew install graphvizも
 ```
 - nodebrewでnodeをインストール
 ```shell
@@ -107,6 +108,12 @@ $ rails s
 $ redis-server
 $ bundle exec sidekiq -C config/sidekiq.yml -d
 ```
+
+### トラブルシューティング
+- +[NSValue initialize] may have been in progress in another thread when fork() was called.
+  - [Rails: may have been in progress in another thread when fork() was called
+](https://stackoverflow.com/questions/52671926/rails-may-have-been-in-progress-in-another-thread-when-fork-was-called)
+  - .zshrcに`export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES`
 
 ### 参照した記事
 - [Rails Girls インストール・レシピ](http://railsgirls.jp/install)
