--- a/develop/establishment/_20191205_mac.md
+++ b/develop/establishment/_20191205_mac.md
@@ -1,5 +1,4 @@
 ## 環境構築時に実行したこと
-
 ### 環境整備
 - Xcodeをインストール(App store)
 - コマンドラインツールをインストール
@@ -10,29 +9,21 @@ $ xcode-select --install
 ```shell
 $ ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
 ```
-- Homebrewでrbenv、postgresql、nodebrew、yarn、redis、vim、graphvizをインストール
-```shell
-// brew updateで最新状態を確認してから
-$ brew install rbenv
-$ brew install postgresql
-$ brew install nodebrew
-$ brew install yarn
-$ brew install redis
-$ brew install vim
-$ brew install graphvizも
-```
-- nodebrewでnodeをインストール
-```shell
-$ nodebrew setup
-
-// インストールできるバージョンの確認
-$ nodebrew ls-remote
-
-// インストールしたいバージョンをインストール
-$ nodebrew install v10.14.0
-```
+- Homebrewで必要なソフトをインストール
+  - brew updateで最新状態を確認してから
+    - rbenv
+    - postgresql
+    - nodebrew
+    - yarn
+    - redis
+    - vim
+    - graphviz
+    - selenium-server-standalone
+    - chromedriver(cask)
+    - docker(cask)
 - シェルをzshに変更
-- vimの設定を行う
+  - .zshrcにrbenvを設定してsource `eval "$(rbenv init -)"`
+- vimの設定
 
 ### GitHubの環境整備
 - ローカルに秘密鍵と公開鍵を作成してssh-agentに登録
@@ -47,6 +38,10 @@ $ ssh-add -K ~/.ssh/github_rsa
 - ~/.ssh/configを作成
 ```
 // .ssh/config
+Host *
+  UseKeychain yes
+  AddKeysToAgent yes
+
 Host github
   HostName github.com
   IdentityFile ~/.ssh/github_rsa
@@ -74,7 +69,7 @@ $ pg_ctl -D /usr/local/var/postgres stop
 // 現在のユーザーを確認
 $ psql -q -c'select * from pg_user' postgres
 
-$ createuser database.yaml指定のusername
+$ createuser config/database.yaml指定のusername
 
 // ユーザーにスーパーユーザーの権限を付与する
 // 現在のテーブルを確認
@@ -83,10 +78,23 @@ $ psql -l
 $ psql -d postgres
 
 // ユーザーをsuにする
-postgres=# ALTER ROLE database.yaml指定のusername WITH SUPERUSER CREATEDB
+postgres=# ALTER ROLE config/database.yaml指定のusername WITH SUPERUSER CREATEDB;
 
 // ユーザーのusesuperが"t"になっていることを確認
 $ psql -q -c'select * from pg_user' postgres
+```
+
+### nodeの準備
+- 開発リポジトリの.node-versionを確認(`cat .node-version`)
+- nodebrewでnodeをインストール
+```shell
+$ nodebrew setup
+
+// インストールできるバージョンの確認a
+$ nodebrew ls-remote
+
+// 開発リポジトリのバージョンをインストール
+$ nodebrew install v10.14.0
 ```
 
 ### 開発の準備
@@ -109,6 +117,11 @@ $ redis-server
 $ bundle exec sidekiq -C config/sidekiq.yml -d
 ```
 
+### HerokuCLIの準備
+```shell
+$ brew tap heroku/brew && brew install heroku
+```
+
 ### トラブルシューティング
 - +[NSValue initialize] may have been in progress in another thread when fork() was called.
   - [Rails: may have been in progress in another thread when fork() was called
@@ -123,3 +136,4 @@ $ bundle exec sidekiq -C config/sidekiq.yml -d
 - [ssh-agentを利用して、安全にSSH認証を行う](https://qiita.com/naoki_mochizuki/items/93ee2643a4c6ab0a20f5)
 - [nodebrewでnodeのバージョンを切り替える方法](https://qiita.com/kuriya/items/36ae29366df0b7c95dec)
 - [MacのRails5開発でPostgreSQL導入とエラー解決法](https://www.inodev.jp/entry/mac-rails-postgresql)
+- [macOS で再起動しても ssh agent に秘密鍵を保持させ続ける二つの方法](https://qiita.com/sonots/items/a6dec06f95fca4757d4a)
