--- a/develop/establishment/_20191205_mac.md
+++ b/develop/establishment/_20191205_mac.md
@@ -127,6 +127,7 @@ $ brew tap heroku/brew && brew install heroku
   - [Rails: may have been in progress in another thread when fork() was called
 ](https://stackoverflow.com/questions/52671926/rails-may-have-been-in-progress-in-another-thread-when-fork-was-called)
   - .zshrcに`export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES`
+  - 参考: [Why Ruby app servers break on macOS High Sierra and what can be done about it](https://blog.phusion.nl/2017/10/13/why-ruby-app-servers-break-on-macos-high-sierra-and-what-can-be-done-about-it/)
 
 ### 参照した記事
 - [Rails Girls インストール・レシピ](http://railsgirls.jp/install)
