--- a/activities/_20200211_oedo08.md
+++ b/activities/_20200211_oedo08.md
@@ -92,33 +92,36 @@ require_relative './rack/handler/my_server'
 
 module MyServer
   class Server
-    # Rackアプリケーションの実行に必要な環境変数
-    # lib/rack/lint.rb:67 Rack::Lint#check_env
-    # PEP333から採用 => https://knzm.readthedocs.io/en/latest/pep-0333-ja.html
-    RACK_ENV = {
-      'PATH_INFO'         => @path || '/',     # -> リクエストURLのうちドメイン下層のパス
-      'QUERY_STRING'      => '',               # -> リクエストURLのうち?以降のクエリ文字列
-      'REQUEST_METHOD'    => @method || 'GET', # -> HTTPリクエストメソッド
-      'SERVER_NAME'       => 'MY_SERVER',      # -> SCRIPT_NAME、PATH_INFOとの組み合わせでURLを構築する
-      'SERVER_PORT'       => @port.to_s,       # -> SCRIPT_NAME、PATH_INFOとの組み合わせでURLを構築する
-      'rack.version'      => Rack::VERSION,    # -> Rackのバージョンを表す配列
-
-      'rack.input'        => StringIO.new('').set_encoding('ASCII-8BIT'), # -> 入力ストリーム / HTTP POSTデータを含むIO likeなオブジェクト
-      'rack.errors'       => $stderr, # -> エラーストリーム / puts、write、flushメソッドに対応するオブジェクト
-      'rack.multithread'  => false,   # -> アプリケーションが同じプロセス内の別のスレッドによって同時に呼び出されるかどうか
-      'rack.multiprocess' => false,   # -> アプリケーションが別のプロセスによって同時に呼び出されるかどうか
-      'rack.run_once'     => false,   # -> アプリケーションがそのプロセスの実行中に一度だけ起動されるかどうか(CGIのみ)
-      'rack.url_scheme'   => @schema&.downcase&.slice(/http[a-z]*/) || 'http'  # -> http or https
-    }
-
     def initialize(*args)
       @host, @port, @app = args # Rack::Handler::MyServer.runから引き継いだ引数
       @method = nil
       @path   = nil
       @schema = nil
+      @query  = nil
       @status = nil
       @header = nil
       @body   = nil
+    end
+
+    # Rackアプリケーションの実行に必要な環境変数
+    # lib/rack/lint.rb:67 Rack::Lint#check_env
+    # PEP333から採用 => https://knzm.readthedocs.io/en/latest/pep-0333-ja.html
+    def rack_env
+      {
+        'PATH_INFO'         => @path   || '/',   # -> リクエストURLのうちドメイン下層のパス
+        'QUERY_STRING'      => @query  || '',    # -> リクエストURLのうち?以降のクエリ文字列
+        'REQUEST_METHOD'    => @method || 'GET', # -> HTTPリクエストメソッド
+        'SERVER_NAME'       => 'MY_SERVER',      # -> SCRIPT_NAME、PATH_INFOとの組み合わせでURLを構築する
+        'SERVER_PORT'       => @port.to_s,       # -> SCRIPT_NAME、PATH_INFOとの組み合わせでURLを構築する
+        'rack.version'      => Rack::VERSION,    # -> Rackのバージョンを表す配列
+
+        'rack.input'        => StringIO.new('').set_encoding('ASCII-8BIT'), # -> 入力ストリーム / HTTP POSTデータを含むIO likeなオブジェクト
+        'rack.errors'       => $stderr, # -> エラーストリーム / puts、write、flushメソッドに対応するオブジェクト
+        'rack.multithread'  => false,   # -> アプリケーションが同じプロセス内の別のスレッドによって同時に呼び出されるかどうか
+        'rack.multiprocess' => false,   # -> アプリケーションが別のプロセスによって同時に呼び出されるかどうか
+        'rack.run_once'     => false,   # -> アプリケーションがそのプロセスの実行中に一度だけ起動されるかどうか(CGIのみ)
+        'rack.url_scheme'   => @schema&.downcase&.slice(/http[a-z]*/) || 'http'  # -> http or https
+      }
     end
 
     def start
@@ -140,8 +143,11 @@ module MyServer
           # クライアントから送信されたリクエストを読み込み、文字列として取得
           # IO#readpartialはデータを受け取るまではブロック状態を保つ
 
-          @method, @path, @schema = request.split("\r\n").first.split
-          # RACK_ENVに使用する値をリクエストから取得
+          @method, path, @schema = request.split("\r\n").first.split
+          # rack_envに使用する値をリクエストから取得
+
+          @path, @query = path.split('?')
+          # リクエストラインのパスからパスとクエリ文字列を取得
 
           puts "Received request message: #{@method} #{@path} #{@schema}"
           # リクエストを受信したことがわかるようにログを出力
