--- a/activities/_20200211_oedo08.md
+++ b/activities/_20200211_oedo08.md
@@ -1,8 +1,8 @@
-# Simplest Rack Compatible TCP Server
-- [shioimm/simplest_rack_compatible_server](https://github.com/shioimm/simplest_rack_compatible_server)
+# 大江戸Ruby会議08 発表メモ
+- [shioimm/simple_rack_compatible_server](https://github.com/shioimm/simple_rack_compatible_server)
 - [rack/rack](https://github.com/rack/rack)
 
-### rack/handler/my_server.rb
+### rack/handler/simple_rack_compatible_server.rb
 - `Rack::Handler`モジュールの拡張
   - 1. `run`メソッドの実装
   - 2. Handlers(`@handlers`)にサーバーを登録
@@ -24,7 +24,7 @@ require 'rack/handler'
 
 module Rack
   module Handler
-    class MyServer
+    class SimpleRackCompatibleServer
       def self.run(app, options = {})
         # 実行環境、ホスト、ポートの設定
         environment  = ENV['RACK_ENV'] || 'development'
@@ -36,22 +36,22 @@ module Rack
         port = options.delete(:Port) || 9292
         args = [host, port, app]
 
-        # 別途実装したMyServer::Serverクラスをインスタンス化し、startメソッドで実行
-        ::MyServer::Server.new(*args).start
+        # 別途実装したSimpleRackCompatibleServer::Serverクラスをインスタンス化し、startメソッドで実行
+        ::SimpleRackCompatibleServer::Server.new(*args).start
       end
     end
 
-    # Rack::Handler::MyServer.runは
+    # Rack::Handler::SimpleRackCompatibleServer.runは
     # lib/rack/server.rb:331でRack::Server#startメソッドから呼ばれている
 
-    register :my_server, MyServer
+    register :simple_rack_compatible_server, SimpleRackCompatibleServer
 
     # rack/lib/rack/handler.rb:85
     # def self.register(server, klass)
     #   @handlers ||= {}
     #   @handlers[server.to_s] = klass.to_s
     # end
-    # -> @handlers = { 'my_server' => 'MyServer' }
+    # -> @handlers = { 'simple_rack_compatible_server' => 'SimpleRackCompatibleServer' }
     # Rack::Handler.registerを実行し、Handlers(@handlers)にサーバーを登録
 
     # Handlers(@handlers)はRack::Handler.getで使用されている
@@ -59,7 +59,7 @@ module Rack
     # def self.get(server)
     #   ...略...
     #   if klass = @handlers[server]
-    #     const_get(klass) -> Rack::Handler::MyServer
+    #     const_get(klass) -> Rack::Handler::SimpleRackCompatibleServer
     #   else
     #     const_get(server, false)
     #   end
@@ -70,8 +70,8 @@ module Rack
     # あるいはlib/rack/handler.rb:36 Rack::Handler.pick:36で呼ばれ、
     # 通信に利用するサーバーを返す
 
-    # つまりRack::Handler::registerによってMyServerを登録し、
-    # Rack::Handler::MyServer.runメソッドによってMyServerを起動している
+    # つまりRack::Handler::registerによってSimpleRackCompatibleServerを登録し、
+    # Rack::Handler::SimpleRackCompatibleServer.runメソッドによってSimpleRackCompatibleServerを起動している
 
     # lib/rack.rb:106
     # autoload :Handler, "rack/handler"
@@ -80,20 +80,20 @@ module Rack
 end
 ```
 
-### my_server.rb
-- `MyServer::Server`の実行
+### simple_rack_compatible_server.rb
+- `SimpleRackCompatibleServer::Server`の実行
   - ソケットの作成
     - ソケットでリクエストを受け付ける
     - ソケットでレスポンスを返す
       - Rackアプリケーションの実行
 ```ruby
 require 'socket'
-require_relative './rack/handler/my_server'
+require_relative './rack/handler/simple_rack_compatible_server'
 
-module MyServer
+module SimpleRackCompatibleServer
   class Server
     def initialize(*args)
-      @host, @port, @app = args # Rack::Handler::MyServer.runから引き継いだ引数
+      @host, @port, @app = args # Rack::Handler::SimpleRackCompatibleServer.runから引き継いだ引数
       @method = nil
       @path   = nil
       @schema = nil
