--- a/activities/_20200211_oedo08.md
+++ b/activities/_20200211_oedo08.md
@@ -111,7 +111,7 @@ module SimpleRackCompatibleServer
         'PATH_INFO'         => @path   || '/',   # -> リクエストURLのうちドメイン下層のパス
         'QUERY_STRING'      => @query  || '',    # -> リクエストURLのうち?以降のクエリ文字列
         'REQUEST_METHOD'    => @method || 'GET', # -> HTTPリクエストメソッド
-        'SERVER_NAME'       => 'MY_SERVER',      # -> SCRIPT_NAME、PATH_INFOとの組み合わせでURLを構築する
+        'SERVER_NAME'       => 'simple_rack_compatible_server', # -> SCRIPT_NAME、PATH_INFOとの組み合わせでURLを構築する
         'SERVER_PORT'       => @port.to_s,       # -> SCRIPT_NAME、PATH_INFOとの組み合わせでURLを構築する
         'rack.version'      => Rack::VERSION,    # -> Rackのバージョンを表す配列
 
