--- a/activities/_20200211_oedo08.md
+++ b/activities/_20200211_oedo08.md
@@ -106,7 +106,7 @@ module SimpleRackCompatibleServer
     # Rackアプリケーションの実行に必要な環境変数
     # lib/rack/lint.rb:67 Rack::Lint#check_env
     # PEP333から採用 => https://knzm.readthedocs.io/en/latest/pep-0333-ja.html
-    def rack_env
+    def env
       {
         'PATH_INFO'         => @path   || '/',   # -> リクエストURLのうちドメイン下層のパス
         'QUERY_STRING'      => @query  || '',    # -> リクエストURLのうち?以降のクエリ文字列
@@ -116,10 +116,10 @@ module SimpleRackCompatibleServer
         'rack.version'      => Rack::VERSION,    # -> Rackのバージョンを表す配列
 
         'rack.input'        => StringIO.new('').set_encoding('ASCII-8BIT'), # -> 入力ストリーム / HTTP POSTデータを含むIO likeなオブジェクト
-        'rack.errors'       => $stderr, # -> エラーストリーム / puts、write、flushメソッドに対応するオブジェクト
-        'rack.multithread'  => false,   # -> アプリケーションが同じプロセス内の別のスレッドによって同時に呼び出されるかどうか
-        'rack.multiprocess' => false,   # -> アプリケーションが別のプロセスによって同時に呼び出されるかどうか
-        'rack.run_once'     => false,   # -> アプリケーションがそのプロセスの実行中に一度だけ起動されるかどうか(CGIのみ)
+        'rack.errors'       => $stderr, # -> エラーストリーム / puts、write、flushメソッドを呼ぶことができるオブジェクト
+        'rack.multithread'  => false,   # -> アプリケーションが同じプロセス内で複数のスレッドによって同時に呼び出されるかどうか
+        'rack.multiprocess' => false,   # -> アプリケーションが複数ののプロセスによって同時に呼び出されるかどうか
+        'rack.run_once'     => false,   # -> アプリケーションがそのプロセスの実行中に一度だけ起動されるかどうか(CGIベースのサーバーのみ)
         'rack.url_scheme'   => @schema&.downcase&.slice(/http[a-z]*/) || 'http'  # -> http or https
       }
     end
@@ -152,7 +152,7 @@ module SimpleRackCompatibleServer
           puts "Received request message: #{@method} #{@path} #{@schema}"
           # リクエストを受信したことがわかるようにログを出力
 
-          @status, @header, @body = @app.call(RACK_ENV)
+          @status, @header, @body = @app.call(env)
           # Rackアプリケーションを実行して返り値を取得
 
           client.puts <<~MESSAGE
