--- a/develop/establishment/_20191205_mac.md
+++ b/develop/establishment/_20191205_mac.md
@@ -6,8 +6,12 @@
 $ xcode-select --install
 ```
 - Homebrewをインストール
+  - [Homebrew](https://brew.sh/index_ja)
 ```shell
-$ ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+$ which ruby
+/usr/bin/ruby
+
+$ /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
 ```
 - Homebrewで必要なソフトをインストール
   - brew updateで最新状態を確認してから
