Add _shebang.md & ruby/_installation.md

--- a/develop/establishment/_20191205_mac.md
+++ b/develop/establishment/_20191205_mac.md
@@ -8,7 +8,7 @@ $ xcode-select --install
 - Homebrewをインストール
   - [Homebrew](https://brew.sh/index_ja)
 ```shell
-$ which ruby
+$ sudo which ruby
 /usr/bin/ruby
 
 $ /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
