--- a/develop/setup/_20191205_mac.md
+++ b/develop/setup/_20191205_mac.md
@@ -1,3 +1,9 @@
+## 環境
+- MacBook Pro 13-inch, 2018
+- Intel Core i5
+- メモリ8GB
+- macOS Mojave 10.14.6
+
 ## 環境構築時に実行したこと
 ### 環境整備
 - Xcodeをインストール(App store)
