--- a/develop/setup/_20210207_thinkpad.md
+++ b/develop/setup/_20210207_thinkpad.md
@@ -27,3 +27,116 @@
     - `標準インストール`
     - `Ubuntuのインストール中にアップデートをダウンロードする`
     - `UbuntuをWindows Boot Managerとは別にインストール`
+
+## 端末のショートカットを設定変更
+- 端末 > 設定 > ショートカット
+
+## zshをインストール
+```
+$ sudo apt install zsh
+$ sudo chsh -s $(which zsh)
+$ which zsh
+# => /usr/bin/zsh
+
+# ログアウトしてログインし直し、端末を立ち上げる
+
+This is the Z Shell configuration function for new users,
+zsh-newuser-install.
+You are seeing this message because you have no zsh startup files
+(the files .zshenv, .zprofile, .zshrc, .zlogin in the directory
+~).  This function can help you with a few settings that should
+make your use of the shell easier.
+
+You can:
+
+(q)  Quit and do nothing.  The function will be run again next time.
+
+(0)  Exit, creating the file ~/.zshrc containing just a comment.
+     That will prevent this function being run again.
+
+(1)  Continue to the main menu.
+
+(2)  Populate your ~/.zshrc with the configuration recommended
+     by the system administrator and exit (you will need to edit
+     the file by hand, if so desired).
+
+--- Type one of the keys in parentheses --- 
+
+# .zshrcを作成するために2を選択
+```
+
+## curlをインストール
+```
+$ sudo apt install curl
+```
+
+## treeをインストール
+```
+$ sudo apt install tree
+```
+
+## Vimをインストール
+```
+$ sudo apt install vim-gtk
+```
+
+```
+# .vimrc
+# ヤンクしたものをクリップボードに貼り付ける設定
+
+set clipboard=unnamedplus
+```
+
+## vim-plugをインストール
+- [junegunn / vim-plug](https://github.com/junegunn/vim-plug)
+```
+$ curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
+    https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+```
+- `.vimrc`を追加
+
+## Gitをインストール
+```
+$ sudo apt install git
+$ git --version
+# => git version 2.25.1
+
+$ git config --global user.name "XXX yyy"
+$ git config --global user.email "zzz@example.com"
+```
+
+## GitHubと連携
+```
+$ ssh-keygen -t rsa -C "zzz@example.com"
+# => ~/.ssh/id_rsaが作成される
+
+$ cat ~/.ssh/id_rsa.pub
+# => 表示された公開鍵をCtrl + shift + cでコピーして
+# GitHub > Settings > SSH and GPG keysへ登録
+
+$ ssh -T git@github.com
+> yes
+# => Hi shioimm! You've successfully authenticated, ...
+```
+
+## zshにPreztoを適用
+- 参照: [Zsh + Prezto で快適コマンド環境を構築する](https://dev.classmethod.jp/articles/zsh-prezto/)
+```
+$ git clone --recursive https://github.com/sorin-ionescu/prezto.git "${ZDOTDIR:-$HOME}/.zprezto"
+
+$ mkdir ~/.zshrc ~/.zshrc_orig
+
+$ setopt EXTENDED_GLOB
+for rcfile in "${ZDOTDIR:-$HOME}"/.zprezto/runcoms/^README.md(.N); do
+  ln -s "$rcfile" "${ZDOTDIR:-$HOME}/.${rcfile:t}"
+done
+
+# update時
+$ git pull && git submodule update --init --recursiv
+```
+- `.zshrc`をカスタマイズ
+
+## manを日本語化
+```
+$ sudo apt install manpages-ja manpages-ja-dev
+```
