--- a/activities/_20191101-02_rails_girls.md
+++ b/activities/_20191101-02_rails_girls.md
@@ -258,7 +258,7 @@ https://jp.heroku.com/pricing#databases
 ### 原因
 ```
 $ which brew
-/usr/local/bin//brew
+/usr/local/bin/brew
 
 $ echo $PATH
 // -> usr/lobal/binが抜けていた
