--- a/develop/setup/_20210207_thinkpad.md
+++ b/develop/setup/_20210207_thinkpad.md
@@ -134,9 +134,57 @@ done
 # update時
 $ git pull && git submodule update --init --recursiv
 ```
-- `.zshrc`をカスタマイズ
+
+## `.zshrc`をカスタマイズ
+-  Tab補完を有効化
+```
+# .zshrc
+autoload -U compinit
+compinit
+```
+
+- オートサジェスト
+```
+$ git clone https://github.com/zsh-users/zsh-autosuggestions ~/.zsh/zsh-autosuggestions
+```
+
+```
+# .zshrc
+source ~/.zsh/zsh-autosuggestions/zsh-autosuggestions.zsh
+```
+
+```
+$ source .zshrc
+```
 
 ## manを日本語化
 ```
 $ sudo apt install manpages-ja manpages-ja-dev
+```
+
+## Rubyのインストール
+- 関連パッケージのインストール
+  - [rbenv/ruby-build](https://github.com/rbenv/ruby-build/wiki)
+```
+$ apt install autoconf bison build-essential libssl-dev libyaml-dev libreadline6-dev zlib1g-dev libncurses5-dev libffi-dev libgdbm6 libgdbm-dev libdb-dev
+```
+
+```
+$ git clone https://github.com/rbenv/rbenv.git ~/.rbenv
+$ git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build
+```
+
+```
+# .zshrc
+
+exp ort PATH="$HOME/.rbenv/bin:$PATH"
+eval "$(rbenv init -)"
+```
+
+```
+$ source ~/.zshrc
+$ rbenv install -l
+$ rbenv install x.x.x
+$ rbenv global x.x.x
+$ ruby -v
 ```
