--- a/env/aws/_s3.md
+++ b/env/aws/_s3.md
@@ -1,11 +1,22 @@
 # Amazon S3
 - 参照: [Amazon S3](https://aws.amazon.com/jp/s3/)
 - 参照: AWSをはじめよう　～AWSによる環境構築を1から10まで～
+- 参照: サーバ・インフラエンジニアの基本がこれ一冊でしっかり身につく本 9.3
 
 ## TL;DR
-- オブジェクトストレージ
-- HTTPでアクセスを行う(アップロード・ダウンロード)
+- 拡張性と耐久性を兼ね備えたオブジェクトストレージ
+  - オブジェクト(ファイル)単位でデータを保存・取得する
+- ファイルの保存・読み出しをHTTP API経由で行う
   - 保存したファイルにはすべてURLが付与される
-- データをオブジェクトとしてバケットに保存する
+- バケット単位で設定を管理し、それぞれのバケットが独立したネームスペースになる
+  - バケット名がキー・ファイルが値のKVS
   - バケット名は一意であること(HTTPアクセスをするためのキーとなるため)
 - オブジェクトは少なくとも3つのAZに保存され、高い耐久性を持つ
+- 大量・大容量ファイルの長期保存に向いている
+
+## AWS内での利用
+- CloudTail - ログ保存
+- CloudFront - ログ保存
+- ELB - ログ保存
+- EBS - バックアップ保存
+- RDS - バックアップ保存
