--- a/env/aws/_s3.md
+++ b/env/aws/_s3.md
@@ -1,9 +1,4 @@
 # Amazon S3
-- 参照: [Amazon S3](https://aws.amazon.com/jp/s3/)
-- 参照: AWSをはじめよう　～AWSによる環境構築を1から10まで～
-- 参照: サーバ・インフラエンジニアの基本がこれ一冊でしっかり身につく本 9.3
-
-## TL;DR
 - 拡張性と耐久性を兼ね備えたオブジェクトストレージ
   - オブジェクト(ファイル)単位でデータを保存・取得する
 - ファイルの保存・読み出しをHTTP API経由で行う
@@ -20,3 +15,8 @@
 - ELB - ログ保存
 - EBS - バックアップ保存
 - RDS - バックアップ保存
+
+## 参照
+- [Amazon S3](https://aws.amazon.com/jp/s3/)
+- AWSをはじめよう　～AWSによる環境構築を1から10まで～
+- サーバ・インフラエンジニアの基本がこれ一冊でしっかり身につく本 9.3
