--- a/aws/services/_s3.md
+++ b/aws/services/_s3.md
@@ -1,13 +1,17 @@
 # Amazon S3
-- 拡張性と耐久性を兼ね備えたオブジェクトストレージ
+- 拡張性と耐久性を兼ね備えたサーバーレスなオブジェクトストレージ
   - オブジェクト(ファイル)単位でデータを保存・取得する
+  - ユーザーは占有されたストレージ用仮想インスタンスを用いず、APIを通じてデータの読み書きの操作を行う
+  - 事前に決められたディスク領域のサイズはなく、データを入れた分だけ保存領域が拡大していく
+- オブジェクトは少なくとも3つのAZに保存され、高い耐久性を持つ
+- 大量・大容量ファイルの長期保存に向いている
+
+### 内部構造
 - ファイルの保存・読み出しをHTTP API経由で行う
   - 保存したファイルにはすべてURLが付与される
 - バケット単位で設定を管理し、それぞれのバケットが独立したネームスペースになる
   - バケット名がキー・ファイルが値のKVS
   - バケット名は一意であること(HTTPアクセスをするためのキーとなるため)
-- オブジェクトは少なくとも3つのAZに保存され、高い耐久性を持つ
-- 大量・大容量ファイルの長期保存に向いている
 
 ## AWS内での利用
 - CloudTail - ログ保存
@@ -20,3 +24,4 @@
 - [Amazon S3](https://aws.amazon.com/jp/s3/)
 - AWSをはじめよう　～AWSによる環境構築を1から10まで～
 - サーバ・インフラエンジニアの基本がこれ一冊でしっかり身につく本 9.3
+- [11. Serverless architecture](https://tomomano.github.io/learn-aws-by-coding/#sec_serverless)
