--- a/aws/services/_s3.md
+++ b/aws/services/_s3.md
@@ -13,6 +13,10 @@
   - バケット名がキー・ファイルが値のKVS
   - バケット名は一意であること(HTTPアクセスをするためのキーとなるため)
 
+### Public access mode
+- ONにすることによってバケットの中のファイルは認証なしで誰でも閲覧可能になる
+- 固有のURLがバケットに対して付与される
+
 ## AWS内での利用
 - CloudTail - ログ保存
 - CloudFront - ログ保存
@@ -25,3 +29,4 @@
 - AWSをはじめよう　～AWSによる環境構築を1から10まで～
 - サーバ・インフラエンジニアの基本がこれ一冊でしっかり身につく本 9.3
 - [11. Serverless architecture](https://tomomano.github.io/learn-aws-by-coding/#sec_serverless)
+- [13. Hands-on #6: Bashoutter](https://tomomano.github.io/learn-aws-by-coding/#sec_bashoutter)
