Add infrastructure & tools

--- a/cases/heroku/metrics/_h12.md
+++ b/cases/heroku/metrics/_h12.md
@@ -6,3 +6,7 @@
   - ログ収集基盤ツールを利用して対象日について"Request timeout"で該当のログを検索する
   - 外部サービスに関連する箇所である場合は外部サービスのインシデント情報を確認する
   - `request_id`で対象のリクエストを絞り込む
+
+## Request Timeoutしていない遅いリクエスト
+- `/[0-9]{5,}ms/`でログを検索
+- `ログの出力時刻 - リクエストにかかった秒数`時点のログを出力し、Web dynoの番号でリクエストを特定する
