--- a/tools/stat/_k6.md
+++ b/tools/stat/_k6.md
@@ -16,7 +16,17 @@ export default function () {
 
 ```
 $ k6 run script.js
+
+// 並列数1
+$ k6 run --vus 1 script.js
+
+// 実行時間30秒
+$ k6 run --duration 30s script.js
 ```
+
+- `http_reqs` - 1秒間あたりに処理したリクエスト数
+- `http_req_failed` - 失敗したリクエスト数
+- `http_req_duration` - 平均レスポンスタイム
 
 ## 参照
 - [k6](https://k6.io/open-source/)
