--- a/cases/setup/_20220928_m2mac.md
+++ b/cases/setup/_20220928_m2mac.md
@@ -35,3 +35,26 @@ $ sudo xcode-select --switch /Applications/Xcode.app
 5. (1Password) 表示されるスニペットをコピー
 6. (~/.ssh/config) スニペットをペースト
 7. `$ ssh -T git@github.com`
+
+### nodeのインストール
+1. [nvm](https://github.com/nvm-sh/nvm)のインストール
+2. `$ nvm install --lts`
+
+### PostgreSQLのインストール
+1. [Postgres.app](https://postgresapp.com/)のインストール
+2. `psql`コマンドの設定
+    - [Configure your $PATH](https://postgresapp.com/documentation/cli-tools.html)
+    - `$ echo 'export PATH=/Applications/Postgres.app/Contents/Versions/<VersionNum>/bin:$PATH >> ~/.zshrc`
+3. Postgres.appを起動してinitializeを実行
+
+#### initialize時に`FATAL: could not create shared memory segment: Cannot allocate memory`
+- [19.4. カーネルリソースの管理](https://www.postgresql.jp/document/14/html/kernel-resources.html)
+- アンチウイルスソフトによって共有メモリが占有されているためサーバーを起動できない
+- 共有メモリの容量を増加させる
+
+```
+$ sudo sysctl -w sykern.sysv.shmall=32768
+
+# Macを再起動
+$ sysctl -a | grep 'sykern.sysv.shmall' # 32768になっていれば成功
+```
