--- a/cases/setup/_20220928_m2mac.md
+++ b/cases/setup/_20220928_m2mac.md
@@ -41,16 +41,23 @@ $ sudo xcode-select --switch /Applications/Xcode.app
 2. `$ nvm install --lts`
 
 ### PostgreSQLのインストール
+#### Postgres.appの利用 (※ DockerからPostgreSQLを利用することになったため後でアンインストール)
 1. [Postgres.app](https://postgresapp.com/)のインストール
 2. `psql`コマンドの設定
     - [Configure your $PATH](https://postgresapp.com/documentation/cli-tools.html)
     - `$ echo 'export PATH=/Applications/Postgres.app/Contents/Versions/<VersionNum>/bin:$PATH >> ~/.zshrc`
 3. Postgres.appを起動してinitializeを実行
+4. `~./bundle/config`に`BUNDLE_BUILD__PG`を追加
 
-#### initialize時に`FATAL: could not create shared memory segment: Cannot allocate memory`
-- [19.4. カーネルリソースの管理](https://www.postgresql.jp/document/14/html/kernel-resources.html)
-- アンチウイルスソフトによって共有メモリが占有されているためサーバーを起動できない
-- 共有メモリの容量を増加させる
+```
+---
+BUNDLE_BUILD__PG: "--with-pg-config=/Applications/Postgres.app/Contents/Versions/<VersionNum>/bin/pg_config"
+```
+
+- initialize時に`FATAL: could not create shared memory segment: Cannot allocate memory`
+  - [19.4. カーネルリソースの管理](https://www.postgresql.jp/document/14/html/kernel-resources.html)
+  - アンチウイルスソフトによって共有メモリが占有されているためサーバーを起動できない
+  - 共有メモリの容量を増加させる
 
 ```
 $ sudo sysctl -w sykern.sysv.shmall=32768
@@ -58,3 +65,46 @@ $ sudo sysctl -w sykern.sysv.shmall=32768
 # Macを再起動
 $ sysctl -a | grep 'sykern.sysv.shmall' # 32768になっていれば成功
 ```
+
+#### pg gemインストール時にエラー
+
+```
+ERROR:  Error installing pg:
+  ERROR: Failed to build gem native extension.
+
+    current directory: /Users/misaki-shioi/.rbenv/versions/3.0.3/lib/ruby/gems/3.0.0/gems/pg-1.4.3/ext
+/Users/misaki-shioi/.rbenv/versions/3.0.3/bin/ruby -I /Users/misaki-shioi/.rbenv/versions/3.0.3/lib/ruby/3.0.0 -r ./siteconf20221004-28586-rfal1i.rb extconf.rb --with-pg-config\=/Applications/Postgres.app/Contents/Versions/11/bin/pg_config
+Calling libpq with GVL unlocked
+Using config values from /Applications/Postgres.app/Contents/Versions/11/bin/pg_config
+checking for whether -Wl,-rpath,/Applications/Postgres.app/Contents/Versions/11/lib is accepted as LDFLAGS... yes
+Using libpq from /Applications/Postgres.app/Contents/Versions/11/lib
+checking for libpq-fe.h... yes
+checking for libpq/libpq-fs.h... yes
+checking for pg_config_manual.h... yes
+checking for PQconnectdb() in -lpq... no
+checking for PQconnectdb() in -llibpq... no
+checking for PQconnectdb() in -lms/libpq... no
+Can't find the PostgreSQL client library (libpq)
+*****************************************************************************
+
+Unable to find PostgreSQL client library.
+
+Please install libpq or postgresql client package like so:
+  brew install libpq
+
+or try again with:
+  gem install pg -- --with-pg-config=/path/to/pg_config
+
+or set library paths manually with:
+  gem install pg -- --with-pg-include=/path/to/libpq-fe.h/ --with-pg-lib=/path/to/libpq.so/
+
+*** extconf.rb failed ***
+Could not create Makefile due to some reason, probably lack of necessary
+libraries and/or headers.  Check the mkmf.log file for more details.  You may
+need configuration options.
+```
+
+1. `$ brew install libpq`
+2. `~/.zshrc`に`export PATH="/opt/homebrew/opt/libpq/bin:$PATH"`を追記
+    - DockerからPostgreSQLを利用するためホストマシンへのPostgreSQLのインストールは不要
+    - pg gemのインストール時にlibpqが必要
