--- a/cases/setup/_20220928_m2mac.md
+++ b/cases/setup/_20220928_m2mac.md
@@ -108,3 +108,12 @@ need configuration options.
 2. `~/.zshrc`に`export PATH="/opt/homebrew/opt/libpq/bin:$PATH"`を追記
     - DockerからPostgreSQLを利用するためホストマシンへのPostgreSQLのインストールは不要
     - pg gemのインストール時にlibpqが必要
+
+#### libpqのバージョンとDockerが指定しているPostgreSQLのバージョンが合わない
+- `$ brew install libpq`でlibpq (PG14系) をインストール
+- サービスはPG11系を利用していた
+- おそらくコンテナのビルド時にStructure.sqlが変更されてしまった
+1. `$ brew uninstall libpq`
+    - `~/.zshrc`からlibpqへのパスを削除
+2. `$ brew install postgresql@11`
+    - `~/.zshrc`に`export PATH="/opt/homebrew/opt/postgresql@11/bin:$PATH"`を追記
