--- a/cases/setup/_20220928_m2mac.md
+++ b/cases/setup/_20220928_m2mac.md
@@ -66,7 +66,7 @@ $ sudo sysctl -w sykern.sysv.shmall=32768
 $ sysctl -a | grep 'sykern.sysv.shmall' # 32768になっていれば成功
 ```
 
-#### pg gemインストール時にエラー
+#### pg gemインストール時にエラー (※ HomebrewでインストールしたPGを利用することになったため後でアンインストール)
 
 ```
 ERROR:  Error installing pg:
@@ -117,3 +117,9 @@ need configuration options.
     - `~/.zshrc`からlibpqへのパスを削除
 2. `$ brew install postgresql@11`
     - `~/.zshrc`に`export PATH="/opt/homebrew/opt/postgresql@11/bin:$PATH"`を追記
+
+## 最終的な構成
+- DBなどのミドルウェアはDockerコンテナとしてcompose
+  - Docker経由でミドルウェアを起動する
+  - 実際のデータはホストマシンに格納される (ホストとポートを直接指定することでアクセス可能)
+- Rails、webpackはホストマシンにインストールする
