--- a/activities/rubypp/codes/_3.md
+++ b/activities/rubypp/codes/_3.md
@@ -1,9 +1,6 @@
 # 実装メモ
 
 ```c
-int peek_char = 0;
-int is_increment_op = 0;
-
 static enum yytokentype
 parser_yylex(struct parser_params *p)
 {
@@ -11,14 +8,12 @@ parser_yylex(struct parser_params *p)
   switch (c = nextc(p)) {
   // ...
   case '+':
-    peek_char = peekc(p);
-
-    if (peek_char == '+') {
-      is_increment_op = 1;
+    if (peekc(p) == '+') {
       set_yylval_id('+');
       SET_LEX_STATE(EXPR_BEG);
       return tOP_ASGN;
-    } else if (is_increment_op ) {
+    }
+    if (peekc_n(p, -2) == '+') {
       return set_integer_literal(p, rb_cstr_to_inum("1", 16, FALSE), 0);
     }
     // ...
@@ -29,6 +24,7 @@ parser_yylex(struct parser_params *p)
 
 - 元々は`return parse_numeric(p, '1');`にしていたが、トークンバッファの確保等の処理が不要なため
   `return set_integer_literal(p, rb_cstr_to_inum("1", 16, FALSE), 0);`へ変更
+- 結合度の問題で意図しない挙動になるケースがあることが確認できた
 
 ```c
 #define peekc(p) peekc_n(p, 0)
@@ -36,4 +32,4 @@ parser_yylex(struct parser_params *p)
 #define lex_eol_n_p(p,n) ((p)->lex.pcur+(n) >= (p)->lex.pend)
 ```
 
-- 結合度の問題で意図しない挙動になるケースがあることが確認できた
+- `peekc_n(p, -1)` が現在のトークン
