--- a/activities/rubypp/codes/_2.md
+++ b/activities/rubypp/codes/_2.md
@@ -25,7 +25,38 @@ i.__plusplus__("i", binding)
 method_call : // ...
             | primary_value lex_ctxt tINCOP_ASGN
             {
-              $$ = new_qcall(p, $3, $1, <__plusplus__>, <(name, b)>, &@3, &@$);
+              ID plusplus = rb_intern("__plusplus__");
+
+              $$ = new_qcall(p, $3, $1, plusplus, <(name, b)>, &@3, &@$);
               nd_set_line($$, @3.end_pos.lineno);
             }
+
+// やること
+//   $1->u1.value の名前をノードとして取得する
+//   self を VALUEとして取得する
+//   VALUE b = rb_funcall(<self>, rb_intern("binding"), 0); を取得する
+//   NODE *binding = NEW_LIT(b, &NULL_LOC); を取得する
+//   $1->u1.value の名前ノードとbindingの配列ノードを作り、第三引数に渡す
+```
+
+```c
+// メソッドのIDを取得
+ID method = rb_intern("to_s");
+
+// メソッドの実行結果のVALUEを取得
+VALUE result = rb_funcall($1->u1.value, method, 0);
+```
+
+### 引数 (`NODE *args`)
+- `NEW_LIST`で要素`a`を持つ新しいリストを作成し、`list_append()`で要素`item`を追加する
+
+```c
+// node.h
+#define NEW_LIST(a,loc) NEW_NODE(NODE_LIST,a,1,0,loc)
+
+// parse.y
+static NODE*
+list_append(struct parser_params *p, NODE *list, NODE *item)
+{
+}
 ```
