--- a/activities/rubypp/codes/_2.md
+++ b/activities/rubypp/codes/_2.md
@@ -25,20 +25,27 @@ i.__plusplus__("i", binding)
 method_call : // ...
             | primary_value lex_ctxt tINCOP_ASGN
             {
-              // メソッド名
-              ID plusplus = rb_intern("__plusplus__");
+              /*%%%*/
+              SET_LEX_STATE(EXPR_END);
 
-              // 第一引数 ("i")
+              // 変数"i"
               VALUE v = rb_id_quote_unprintable($1->nd_vid);
               NODE *receiver = NEW_LIT(v, &NULL_LOC);
 
-              // Bindingオブジェクト
-              NODE *self = NEW_SELF(&NULL_LOC);
-              VALUE b = rb_funcall(self->u1.value, rb_intern("binding"), 0);
-              NODE *binding = NEW_LIT(b, &NULL_LOC);
+              // Binding
+              NODE *self = NEW_SELF(&$1->nd_loc);
+              VALUE b = rb_funcall(self->u3.value, rb_intern("binding"), 0);
+              NODE *binding = NEW_LIT(b, &$1->nd_loc); // <- WIP: mainのBindingになっている
 
-              $$ = new_qcall(p, $3, $1, plusplus, <(name, b)>, &@3, &@$);
+              // 引数
+              NODE *args = NEW_LIST(receiver, &NULL_LOC);
+              args = list_append(p, args, binding);
+
+              ID plusplus = rb_intern("__plusplus__");
+
+              $$ = new_qcall(p, $3, $1, plusplus, args, &@3, &@$);
               nd_set_line($$, @3.end_pos.lineno);
+              /*% %*/
             }
 
 // やること
