--- a/activities/rubypp/codes/_2.md
+++ b/activities/rubypp/codes/_2.md
@@ -82,9 +82,21 @@ static NODE*
 list_append(struct parser_params *p, NODE *list, NODE *item);
 ```
 
-```c
-// self オブジェクトの作成
+## `self`
 
+```c
+// トークン self の切り出し
+static enum yytokentype
+parse_ident(struct parser_params *p, int c, int cmd_state)
+{
+  // ...
+  if (IS_lex_state_for(state, (EXPR_BEG | EXPR_LABELED | EXPR_CLASS))) {
+    return kw->id[0]; // enum yytokentype = 288
+  }
+  // ...
+}
+
+// selfノードの作成
 // node.h
 #define NEW_SELF(loc) NEW_NODE(NODE_SELF,0,0,1,loc)
 #define NEW_NODE(t,a0,a1,a2,loc) rb_node_newnode((t),(VALUE)(a0),(VALUE)(a1),(VALUE)(a2),loc)
