--- a/activities/rubypp/codes/_2.md
+++ b/activities/rubypp/codes/_2.md
@@ -49,13 +49,17 @@ method_call : // ...
             }
 
 // やること
-//   メソッド名をIDとして取得する
-//   (引数)
-//     $1->u1.value の名前をノードとして取得する
-//     self を VALUEとして取得する
-//     VALUE b = rb_funcall(<self>, rb_intern("binding"), 0); を取得する
-//     NODE *binding = NEW_LIT(b, &NULL_LOC); を取得する
-//     $1->u1.value の名前ノードとbindingの配列ノードを作り、第三引数に渡す
+//   newtok(p);
+//   tokadd_mbchar(p, 's');
+//   tokadd_mbchar(p, 'e');
+//   tokadd_mbchar(p, 'l');
+//   tokadd_mbchar(p, 'f');
+//   tokfix(p);
+//   const struct kwtable *kw;
+//   kw = rb_reserved_word(tok(p), toklen(p));
+//   enum lex_state_e state = p->lex.state;
+//   SET_LEX_STATE(kw->state);
+//   p->command_start = TRUE;
 ```
 
 ```c
