--- a/activities/rubypp/codes/_2.md
+++ b/activities/rubypp/codes/_2.md
@@ -33,9 +33,12 @@ method_call : // ...
               NODE *receiver = NEW_LIT(v, &NULL_LOC);
 
               // Binding
+              // 何のコンテキストも持っていないselfが返ってきてしまう
               NODE *self = NEW_SELF(&$1->nd_loc);
               VALUE b = rb_funcall(self->u3.value, rb_intern("binding"), 0);
               NODE *binding = NEW_LIT(b, &$1->nd_loc); // <- WIP: mainのBindingになっている
+
+              // WIP: selfに対してbindingをrb_funcallせず、直接binding (NODE_VCALL) を作ってみる
 
               // 引数
               NODE *args = NEW_LIST(receiver, &NULL_LOC);
