--- a/activities/202305_rubykaigi/implementations/_2.md
+++ b/activities/202305_rubykaigi/implementations/_2.md
@@ -1,5 +1,7 @@
 # 実装メモ
 
+#### numeric.rb
+
 ```ruby
 class Integer
   def __plusplus__(name, b)
@@ -19,9 +21,9 @@ i.__plusplus__("i", binding)
 #          (LIST@1:15-1:27 (STR@1:15-1:18 "i") (VCALL@1:20-1:27 :binding) nil)))
 ```
 
-```c
-// parse.y
+#### parse.y
 
+```c
 method_call : // ...
             | primary_value lex_ctxt tINCOP_ASGN
             {
@@ -34,11 +36,19 @@ method_call : // ...
 
               // Binding
               // 何のコンテキストも持っていないselfが返ってきてしまう
-              NODE *self = NEW_SELF(&$1->nd_loc);
-              VALUE b = rb_funcall(self->u3.value, rb_intern("binding"), 0);
-              NODE *binding = NEW_LIT(b, &$1->nd_loc); // <- WIP: mainのBindingになっている
-
-              // WIP: selfに対してbindingをrb_funcallせず、直接binding (NODE_VCALL) を作ってみる
+              // NODE *self = NEW_SELF(&$1->nd_loc);
+              // VALUE b = rb_funcall(self->u3.value, rb_intern("binding"), 0);
+              // NODE *binding = NEW_LIT(b, &$1->nd_loc); // <- WIP: mainのBindingになっている
+              // ------------------------
+              // これだとトップレベルでしか呼べない
+              // VALUE b = rb_const_get(rb_cObject, rb_intern("TOPLEVEL_BINDING"));
+              // NODE *binding = NEW_LIT(b, &@1);
+              // ------------------------
+              // これもコンテキストなしになる
+              // VALUE b = rb_binding_new();
+              // NODE *binding = NEW_LIT(b, &@1);
+              // 成功
+              NODE *binding = NEW_VCALL(rb_intern("binding"), &@1);
 
               // 引数
               NODE *args = NEW_LIST(receiver, &NULL_LOC);
